create resume page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bolo de Chocolate</title>
+    <title>John Doe - Resume</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Bolo de Chocolate</h1>
-    <p>Bolo de Chocolate é um bolo de chocolate</p>
-    <p>Bolo de Chocolate é um bolo de chocolate</p>
+    <div class="resume-container">
+      <header>
+        <h1>John Doe</h1>
+        <p class="title">Front-End Developer</p>
+        <p class="contact">
+          📞 (123) 456-7890 | ✉️ john.doe@email.com | 🌐 www.johndoe.dev
+        </p>
+      </header>
+
+      <section class="summary">
+        <h2>Professional Summary</h2>
+        <p>
+          Passionate front-end developer with 4+ years of experience designing
+          and building responsive web applications. Skilled in JavaScript,
+          React, and UX-focused design.
+        </p>
+      </section>
+
+      <section class="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li>HTML5 / CSS3 / JavaScript</li>
+          <li>React & Next.js</li>
+          <li>Responsive Web Design</li>
+          <li>Git / GitHub</li>
+          <li>UI/UX Principles</li>
+        </ul>
+      </section>
+
+      <section class="experience">
+        <h2>Work Experience</h2>
+
+        <div class="job">
+          <h3>Front-End Developer — ABC Tech</h3>
+          <p class="date">Jan 2022 – Present</p>
+          <ul>
+            <li>
+              Developed and maintained web apps using React and TypeScript.
+            </li>
+            <li>
+              Collaborated with designers to improve user experience and
+              accessibility.
+            </li>
+            <li>Optimized website performance, reducing load times by 25%.</li>
+          </ul>
+        </div>
+
+        <div class="job">
+          <h3>Web Designer — Creative Studio</h3>
+          <p class="date">Jun 2019 – Dec 2021</p>
+          <ul>
+            <li>Designed modern, responsive websites for various clients.</li>
+            <li>Implemented SEO best practices to improve visibility.</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="education">
+        <h2>Education</h2>
+        <p>
+          <strong>B.S. in Computer Science</strong> — State University, 2019
+        </p>
+      </section>
+    </div>
   </body>
 </html>
