--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         </p>
       </header>
 
+      <!-- Make a button that says subscribe to my newsletter -->
+      <button class="subscribe-button">Subscribe to my newsletter</button>
+      <div class="subscribe-message"></div>
       <section class="summary">
         <h2>Professional Summary</h2>
         <p>
@@ -71,5 +74,7 @@
         </p>
       </section>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
